# ProjectEngineEmpty

./: .gitignore  .gitmodules  CMakeLists.txt  OSX Readme.txt  OSX-Build-Bullet-wxWidgets  OSX-BuildBullet-MakeSymLinks.sh  PremakeGenerateBuildFiles.bat  Windows-Build-wxWidgets-bullet3-vs2010.bat  Windows-Build-wxWidgets-vs2010 64bit.bat  Windows-Build-wxWidgets-vs2010-x64.bat  Windows-Build-wxWidgets-vs2010.bat  Windows-Build-wxWidgets-vs2013.bat  Windows-CreateSymLinkForEditorData.bat  Windows-CreateSymLinksForData.bat  premake5.lua  wxWidgets-build-vs2010.bat
GameEmptyReplaceMe/: CMakeLists.txt  EmptyReplaceMe.sln  GenerateProjectFiles.bat  build.sh  premake5.lua  premake5inc.lua
GameEmptyReplaceMe/BulletDynamics.xcodeproj/: project.pbxproj
GameEmptyReplaceMe/EmptyReplaceMe.xcworkspace/: contents.xcworkspacedata
GameEmptyReplaceMe/EmptyReplaceMe.xcworkspace/xcshareddata/: EmptyReplaceMe.xccheckout
GameEmptyReplaceMe/Game/: EmptyReplaceMe.vcxproj  EmptyReplaceMe.vcxproj.filters
GameEmptyReplaceMe/Game/Data/Animations/: stickman.my2daniminfo  stickmanSlow.my2daniminfo
GameEmptyReplaceMe/Game/Data/Audio/: Jump.mycue  Randomize.mycue
GameEmptyReplaceMe/Game/Data/Fonts/: System24.fnt
GameEmptyReplaceMe/Game/Data/Materials/: BlurHorizontal.mymaterial  BlurVertical.mymaterial  Bones.mymaterial  Color-Green.mymaterial  Color-Pink.mymaterial  Color-Red.mymaterial  DefaultMaterial.mymaterial  EdgeDetectBasic.mymaterial  EdgeDetectSobel.mymaterial  Grass.mymaterial  Lights.mymaterial  MenuShadow.mymaterial  Normals.mymaterial  TestFragCoord.mymaterial  TestGeometryShader.mymaterial  TestParticles.mymaterial  TestParticlesInstanced.mymaterial  TestTexture.mymaterial  TextureLights.mymaterial  TintColor.mymaterial
GameEmptyReplaceMe/Game/Data/Materials/Colors/: Color-Green.mymaterial  Color-Pink.mymaterial  Color-Red.mymaterial  Color-White.mymaterial  UnlitColor-Green.mymaterial  UnlitColor-Red.mymaterial
GameEmptyReplaceMe/Game/Data/Menus/: DemoPauseMenu.menu  DemoPauseMenuActions.lua  Test.menu  TestMenuActions.lua
GameEmptyReplaceMe/Game/Data/Meshes/: AnimGuy.fbx.myaniminfo  AnimGuy.fbx.mymesh  TestSpinAllAxes.fbx.mymesh  TestSpinUpAxis.fbx.mymesh  cube.obj.mymesh
GameEmptyReplaceMe/Game/Data/Prefabs/: Prefabs.myprefabs
GameEmptyReplaceMe/Game/Data/Scenes/: DemoPauseMenu.scene  Initial.scene  Multi-enemy.scene  TestAnimation.scene  TestAudio.scene  TestBasicScene.scene  TestFragCoord.scene  TestGeometryShader.scene  TestHeightmap.scene  TestInheritance.scene  TestLights.scene  TestLightsDeferred.scene  TestLua.scene  TestMenuPages.scene  TestObjectPools.scene  TestParenting.scene  TestParticles.scene  TestPhysics.scene  TestPhysicsBox2D.scene  TestPhysicsCharacter.scene  TestPhysicsCube.scene  TestPostEffects.scene  TestPrefabs.scene  TestShadow.scene  TestSprites.scene  TestVoxels.scene  World.scene  test.scene
GameEmptyReplaceMe/Game/Data/Scripts/: CharacterController_2DPhysics.lua  CharacterController_Physics.lua  DemoLoadPauseMenu.lua  Enemy.lua  GGJEnemy.lua  GGJPlayer.lua  GGJTube.lua  Grass.lua  MemoryTest.lua  Player.lua  SimpleCharacterController.lua  TestAudio.lua  TestObjectPool_PooledObject.lua  TestObjectPool_Spawner.lua
GameEmptyReplaceMe/Game/Data/Shaders/: Shader_BoneAnim.glsl  Shader_Grass.glsl  Shader_ParticlesInstanced.glsl  Shader_TestNormals.glsl  Shader_Texture.glsl  Shader_TextureAlpha.glsl  Shader_TextureAlphaTest.glsl  Shader_TextureLights.glsl  Shader_TextureVertexColor.glsl  Shader_TintColor.glsl  Shader_TintColorUnLit.glsl  Shader_VertexColorLights.glsl  TestFragCoord.glsl  TestGeometryShader.glsl
GameEmptyReplaceMe/Game/Data/SpriteSheets/: Stickman.myspritesheet
GameEmptyReplaceMe/Game/Data/Voxels/: Tiles.mymaterial  VoxelWorldCamera.lua  VoxelWorldPlayer.lua
GameEmptyReplaceMe/Game/DataEditor/: CustomExportScene.lua  json.lua
GameEmptyReplaceMe/Game/DataSource/Blend/: AnimGuy.blend  TestSpinAllAxes.blend  TestSpinUpAxis.blend
GameEmptyReplaceMe/Game/DataSource/C#/: Follower.cs  Player.cs  RandomMovement.cs
GameEmptyReplaceMe/Game/DataSource/FBXs/: AnimGuy.fbx  TestSpinAllAxes.fbx  TestSpinUpAxis.fbx
GameEmptyReplaceMe/Game/EmptyReplaceMe.xcodeproj/: project.pbxproj
GameEmptyReplaceMe/Game/EmptyReplaceMe.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
GameEmptyReplaceMe/Game/SourceAndroid/: main.cpp  main.h
GameEmptyReplaceMe/Game/SourceAndroid/AndroidApk/: .project  AndroidManifest.xml  build.xml  project.properties
GameEmptyReplaceMe/Game/SourceAndroid/AndroidStudio/: .gitignore  build.gradle
GameEmptyReplaceMe/Game/SourceAndroid/BuildClassesDex/: BuildClassesDex.bat
GameEmptyReplaceMe/Game/SourceBlackBerry/: .cproject  .project  bar-descriptor.xml
GameEmptyReplaceMe/Game/SourceBlackBerry/src/: main.cpp
GameEmptyReplaceMe/Game/SourceCommon/: GameCommonHeader.cpp  GameCommonHeader.h
GameEmptyReplaceMe/Game/SourceCommon/Core/: GameComponentTypeManager.cpp  GameComponentTypeManager.h  GameEmptyReplaceMe.cpp  GameEmptyReplaceMe.h  GameMainFrame.cpp  GameMainFrame.h
GameEmptyReplaceMe/Game/SourceCommon/GameComponents/: ComponentAIChasePlayer.cpp  ComponentAIChasePlayer.h  ComponentInputTrackMousePos.cpp  ComponentInputTrackMousePos.h
GameEmptyReplaceMe/Game/SourceEmscripten/: emMain.cpp  httpd_Debug.py  httpd_Release.py
GameEmptyReplaceMe/Game/SourceIOS/: EmptyReplaceMe-Info.plist  Info.plist  main.h  main.mm
GameEmptyReplaceMe/Game/SourceLinux/: LinuxMain.cpp  LinuxMain.h  LinuxMainWx.cpp
GameEmptyReplaceMe/Game/SourceNaCL/: MainModule.cpp
GameEmptyReplaceMe/Game/SourceNaCL/Web/: EmptyReplaceMe.nmf  EmptyReplaceMe_Debug.nmf  game.html  game_Debug.html  game_Release.html  gametest.html  myframework.js  myframework.nmf  myframework_dbg.nmf
GameEmptyReplaceMe/Game/SourceOSX/: AppDelegate.h  AppDelegate.mm  Info.plist  MainMenu.xib  MyOpenGLView.h  MyOpenGLView.mm  OSXMainWx.cpp  OSXMainWx.h  main.m
GameEmptyReplaceMe/Game/SourceWP8/: CubeRenderer.cpp  WP8Main.cpp
GameEmptyReplaceMe/Game/SourceWindows/: WinMain.cpp  WinMain.h  WinMainWx.cpp  WinMainWx.h
Releases/: Cleanup.bat  (+12 more)
(+21 files in other folders)
